create meta tags for SEO

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="https://fonts.googleapis.com" rel="preconnect" />
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
+  <meta
+    content="Mila Florystyka oferuje szeroki wybór kompozycji pogrzebowych, florystycznych oraz dekoracji nagrobnych. Znajdź idealne dodatki do swoich aranżacji kwiatowych."
+    name="description">
+  <meta content="florystyka, żywe kwiaty, kompozycje florystyczne, dekoracje nagrobne, akcesoria florystyczne, kwiaty sztuczne, dekoracje kwiatowe, kwiaty na pogrzeb, wieńce, wiązanki, wieńce pogrzebowe"
+        name="keywords">
   <link
     href="https://fonts.googleapis.com/css2?family=Birthstone&family=Dosis:wght@200..800&family=Ranga:wght@400;700&display=swap"
     rel="stylesheet"
