create section pay and delivery

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
   <meta
     content="Mila Florystyka oferuje szeroki wybór kompozycji pogrzebowych, florystycznych oraz dekoracji nagrobnych. Znajdź idealne dodatki do swoich aranżacji kwiatowych."
     name="description">
-  <meta content="florystyka, żywe kwiaty, kompozycje florystyczne, dekoracje nagrobne, akcesoria florystyczne, kwiaty sztuczne, dekoracje kwiatowe, kwiaty na pogrzeb, wieńce, wiązanki, wieńce pogrzebowe"
-        name="keywords">
+  <meta
+    content="florystyka, żywe kwiaty, kompozycje florystyczne, dekoracje nagrobne, akcesoria florystyczne, kwiaty sztuczne, dekoracje kwiatowe, kwiaty na pogrzeb, wieńce, wiązanki, wieńce pogrzebowe"
+    name="keywords">
   <link
     href="https://fonts.googleapis.com/css2?family=Birthstone&family=Dosis:wght@200..800&family=Ranga:wght@400;700&display=swap"
     rel="stylesheet"
@@ -24,18 +25,18 @@
     href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap"
     rel="stylesheet"
   />
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-52HS4W8GVR"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+  <!--  <script async src="https://www.googletagmanager.com/gtag/js?id=G-52HS4W8GVR"></script>-->
+  <!--  <script>-->
+  <!--    window.dataLayer = window.dataLayer || [];-->
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+  <!--    function gtag() {-->
+  <!--      dataLayer.push(arguments);-->
+  <!--    }-->
 
-    gtag('js', new Date());
+  <!--    gtag('js', new Date());-->
 
-    gtag('config', 'G-52HS4W8GVR');
-  </script>
+  <!--    gtag('config', 'G-52HS4W8GVR');-->
+  <!--  </script>-->
 </head>
 <body>
 <app-root></app-root>
