--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap"
     rel="stylesheet"
   />
+  <link href="/fonts/mila-florystyka-icon.css" rel="stylesheet">
   <!--  <script async src="https://www.googletagmanager.com/gtag/js?id=G-52HS4W8GVR"></script>-->
   <!--  <script>-->
   <!--    window.dataLayer = window.dataLayer || [];-->
