create like item

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 
       gtag('config', 'G-52HS4W8GVR');
     </script>
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/6f8733b591.js"></script>
 </head>
 <body>
 <app-root></app-root>
